# ChangeLog for x11-libs/libwnck
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.245 2010/08/18 20:59:28 maekke Exp $

  18 Aug 2010; Markus Meier <maekke@gentoo.org> libwnck-2.28.0.ebuild:
  arm stable, bug #314899

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> libwnck-2.28.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #314899

  13 Aug 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -libwnck-2.20.3.ebuild, -libwnck-2.24.2.ebuild:
  Clean up old revisions.

  05 Aug 2010; Jeroen Roovers <jer@gentoo.org> libwnck-2.30.2.ebuild:
  Stable for HPPA (bug #324077).

  01 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  libwnck-2.30.2.ebuild:
  x86 stable, bug 324077

  31 Jul 2010; Pacho Ramos <pacho@gentoo.org> libwnck-2.30.2.ebuild:
  amd64 stable, bug 324077

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> libwnck-2.28.0.ebuild,
  libwnck-2.30.2.ebuild:
  Stable for HPPA (bug #314899).

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> libwnck-2.24.2.ebuild,
  libwnck-2.26.2-r2.ebuild, libwnck-2.28.0.ebuild, libwnck-2.30.2.ebuild:
  Drop HPPA keywording (bug #324511).

  06 Jul 2010; Pacho Ramos <pacho@gentoo.org> libwnck-2.30.2.ebuild:
  eautoreconf needs introspection.m4 (bug #324167 by Matt McAdoo), thanks to
  Nirbheek Chauhan for suggesting the possible solution.

*libwnck-2.30.2 (22 Jun 2010)

  22 Jun 2010; Pacho Ramos <pacho@gentoo.org> -libwnck-2.30.0.ebuild,
  +libwnck-2.30.2.ebuild:
  Version bump with translation updates and many GSeal-related fixes. Remove
  old testing.

*libwnck-2.30.0 (13 Jun 2010)

  13 Jun 2010; Pacho Ramos <pacho@gentoo.org> +libwnck-2.30.0.ebuild:
  Add new version for Gnome 2.30.

  04 Jun 2010; Markus Meier <maekke@gentoo.org> libwnck-2.28.0.ebuild:
  x86 stable, bug #314899

  03 May 2010; Olivier Crête <tester@gentoo.org> libwnck-2.28.0.ebuild:
  amd64 stable, bug #314899
