@@ -7,15 +7,17 @@ DIST introspection.m4.bz2 1181 RMD160 3648afa820c2ee7e240083076e1452285d043084 S
 DIST libwnck-2.26.2.tar.bz2 684354 RMD160 5554e934419012400dfb293c7d906293028298cc SHA1 b941006e5edf2877f863c541d52485cd141f96da SHA256 fc38a8ef185828e6a9205f2489bd563d8f303655ba533ad6f640e2de8018983c
 DIST libwnck-2.28.0.tar.bz2 712289 RMD160 d088c079a48ede297e7de5438b14ae66043c44e6 SHA1 20158519615d10d14a415d8f0d5b39375350eb81 SHA256 d90be36d2fefa33a9287ed6dc41141213a06463f91d69d847da6b2e59c16b947
 DIST libwnck-2.30.2.tar.bz2 707701 RMD160 2eb3c519e6746e0d3f593dbae265bfad1a2302d6 SHA1 31488d8f3a4ccddd56a5b9ff7f986f2d6d56188e SHA256 41e376df894d81df7daa6131dce7114ffd15b7da357fbeadd031d6d6ecfc443d
+DIST libwnck-2.30.3.tar.bz2 708132 RMD160 df445b92da40518be291fea86c0ca56bc65fc92a SHA1 c65e2a4642dda79b28c3d725234ea52bd4f2b953 SHA256 e3afbeeab591e8f22b32d957e6372bd2f38d0ba33a6a11aa436db840d57a6b04
 EBUILD libwnck-2.26.2-r2.ebuild 1507 RMD160 bbeb98d2c65c00c7225f48be4fb54747a012d0e6 SHA1 26e9adead86aba4fd18ea741f0177bc702d57366 SHA256 7d8309ad2023c9601b3eaa68bba1a5a9684553cdcb6b56c60e4c9db11dbdee33
 EBUILD libwnck-2.28.0.ebuild 1710 RMD160 77d76e1f06e1ee83ca8f4d74f8e4a8983948af68 SHA1 e677d74bd8f3566023960e2c023d671d8e516044 SHA256 0a8ba1d82c14f04393486815a6e20fdadfc48dec606b7520b6ca2c4fe05e6973
 EBUILD libwnck-2.30.2.ebuild 1995 RMD160 866833c51860ea8d7cddaa2287f00995f7b9764b SHA1 0f97d4ec8400da19bb6fcae75b5221313f7e41b5 SHA256 9c3a025d5883dd5c9bf2714c09e9bd08942efa42999a81a4108acb908277fa81
-MISC ChangeLog 29567 RMD160 cadef0d327d2220c87ca97a6371b1580728e5ae9 SHA1 0db72da2ad357e8951c44bfbcfda5d94d0ae4b74 SHA256 7520fa86bae9d753e7d5b65abfa136266e9c0f30b30d0316e62cb515f9aa8fd1
-MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
+EBUILD libwnck-2.30.3.ebuild 1468 RMD160 9af3394e346ce520e8e5b190aa7422572103acaf SHA1 085a1d2d70796ff7579cb3c77292ecf7f36afb1f SHA256 ea2a0e0c4ca869232b26dcd19b57c3c833acaaf932093585b2d81c3f8d4cc232
+MISC ChangeLog 29793 RMD160 47aeaffbeb7a0ae54d6e662c43ebebfd7a4120a6 SHA1 e391b1d5693f3fbf34d6f4e587df1e2487ab23ef SHA256 eebbddd9145ab3609a2dcad3d735ddd9b1d3026fd7ce5f2d5b418431f0e1daf7
+MISC metadata.xml 277 RMD160 2ffb105a089a3b759ddef20bf72b06362a1d1c63 SHA1 82aa8cfe90fb0c9f7c02f295d2802d41ad2af380 SHA256 3d52f90556a9db4ad09f2fbe34e2d25b21f345e474e829ac84669d49cb64c8bb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkxsSVEACgkQkKaRLQcq0GKikQCgruHrU1+InqZaQWNQPj1aR8D3
-7EYAn2D5RMVQcC6EwiNgfmM6PEA8ba4S
-=RTzS
+iEYEARECAAYFAkx0QW4ACgkQ1fmVwcYIWAbPxACg0vJzJ3QWL5ZzGXm7SvOCh41R
+9aIAnjBbE/KR90AFFwQD50C/4rla30n2
+=Ef8F
 -----END PGP SIGNATURE-----
