@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>gnome</herd>
+	<herd>gnome</herd>
+	<use>
+		<flag name="introspection">Use <pkg>dev-libs/gobject-introspection</pkg>
+			for introspection</flag>
+	</use>
 </pkgmetadata>
