@@ -1,6 +1,13 @@
 # ChangeLog for x11-libs/libwnck
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.245 2010/08/18 20:59:28 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.246 2010/08/24 22:01:21 eva Exp $
+
+*libwnck-2.30.3 (24 Aug 2010)
+
+  24 Aug 2010; Gilles Dartiguelongue <eva@gentoo.org>
+  +libwnck-2.30.3.ebuild, metadata.xml:
+  Version bump. Drop old libtool compat code per commt #8 in bug #324167.
+  Add introspection support.
 
   18 Aug 2010; Markus Meier <maekke@gentoo.org> libwnck-2.28.0.ebuild:
   arm stable, bug #314899
